--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "base-node-swe1",
   "version": "1.0.0",
+  "type": "module",
   "description": "# basic-node-swe1",
   "main": "index.js",
   "scripts": {
@@ -18,7 +19,9 @@
     "url": "https://github.com/rocketacademy/base-node-swe1/issues"
   },
   "homepage": "https://github.com/rocketacademy/base-node-swe1#readme",
-  "dependencies": {},
+  "dependencies": {
+    "pg": "^8.6.0"
+  },
   "devDependencies": {
     "eslint": "^7.12.1",
     "eslint-config-airbnb-base": "^14.2.0",
